[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/WallNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerNode.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://assets/font/flappy_bird_font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/background/background_day.png" type="Texture" id=5]
[ext_resource path="res://assets/background/floor.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/Juhani Junkala [Chiptune Adventures] 1. Stage 1.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 284 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 170, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundDay" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, 0 )
texture = ExtResource( 5 )

[node name="PlayerNode" parent="." instance=ExtResource( 2 )]

[node name="Resetter" type="Area2D" parent="."]
position = Vector2( -300, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resetter"]
position = Vector2( -15, 34 )
shape = SubResource( 1 )

[node name="Pipes" type="Node2D" parent="."]

[node name="WallNode" parent="Pipes" instance=ExtResource( 1 )]
position = Vector2( 280, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode2" parent="Pipes" instance=ExtResource( 1 )]
position = Vector2( 480, -60 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode3" parent="Pipes" instance=ExtResource( 1 )]
position = Vector2( 680, 30 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode4" parent="Pipes" instance=ExtResource( 1 )]
position = Vector2( 880, -15 )
__meta__ = {
"_edit_group_": true
}

[node name="WallNode5" parent="Pipes" instance=ExtResource( 1 )]
position = Vector2( 1080, -55 )
__meta__ = {
"_edit_group_": true
}

[node name="HUD" type="Control" parent="."]
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -152.0
margin_right = 254.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 240.0
margin_top = -24.0
margin_right = -220.0
margin_bottom = -264.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 1e-05, 1 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="Floor" type="Area2D" parent="."]

[node name="FloorSprite" type="Sprite" parent="Floor"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( -8, 154 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[connection signal="scored" from="PlayerNode/Player" to="." method="_on_Player_scored"]
[connection signal="body_entered" from="Resetter" to="." method="_on_Resetter_body_entered"]

[editable path="PlayerNode"]
